[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "GistsGetter"
bundle = "com.example"
version = "0.0.1"
url = "https://github.com/pmfrank/gistsgetter.git"
license = "MIT license"
author = 'Paul Frankovich'
author_email = "pmfrankovich@gmail.com"

[tool.briefcase.app.gistsgetter]
formal_name = "GistsGetter"
description = "An application dedicated to creating, editing, and deleting Gists in GitHub"
icon = "src/gistsgetter/resources/gistsgetter"
sources = ['src/gistsgetter']
requires = []


[tool.briefcase.app.gistsgetter.macOS]
requires = [
    'toga-cocoa>=0.3.0.dev18',
]

[tool.briefcase.app.gistsgetter.linux]
requires = [
    'toga-gtk>=0.3.0.dev18',
]

[tool.briefcase.app.gistsgetter.windows]
requires = [
    'toga-winforms>=0.3.0.dev18',
]

# Mobile deployments
[tool.briefcase.app.gistsgetter.iOS]
requires = [
    'toga-iOS>=0.3.0.dev18',
]

[tool.briefcase.app.gistsgetter.android]
requires = [
    'toga-android>=0.3.0.dev18',
]
